changed default user.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,8 +5,9 @@ transport = winrm
 #ask_pass = True
 
 #become_method = runas
-remote_user = ictadmin
+#remote_user = ictadmin
 #remote_user = Administrator
+remote_user = ansible
 
 gathering = smart
 fact_caching = jsonfile
