--- a/group_vars/all/default.yml
+++ b/group_vars/all/default.yml
@@ -1,7 +1,8 @@
 #ansible_connection: winrm
 ansible_connection: psrp
 #ansible_port: 5986
-ansible_user: ictadmin
+ansible_user: ansible
+
 ansible_password: '{{ ansible_winrm_password }}'
 
 ansible_psrp_auth: credssp
