removed missing icons.

--- a/desktop.yml
+++ b/desktop.yml
@@ -110,8 +110,8 @@
     with_items:
     - bingel2.ico
     - computermeester2.ico
-    - gmail2.ico
-    - iomniwize.ico
+#    - gmail2.ico
+#    - iomniwize.ico
     - kweetet3.ico
     - scratch2.ico
     - symbaloo2.ico
