--- a/group_vars/all/default.yml
+++ b/group_vars/all/default.yml
@@ -4,6 +4,7 @@ ansible_connection: psrp
 ansible_user: ansible
 
 ansible_password: '{{ ansible_winrm_password }}'
+ictadmin_password: '{{ ansible_winrm_password }}'
 
 ansible_psrp_auth: credssp
 #ansible_psrp_auth: basic
